Fix Projects View On Mobiles

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -8,7 +8,7 @@
 .projects-page .contents .projects{
     width: 100%;
     height:fit-content;
-    padding: 60px;
+    padding: 60px 0 ;
     display: grid;
     grid-template-columns: repeat(auto-fill , minmax(450px , 1fr));
     gap: 12px;
